--- a/join.html
+++ b/join.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Scandinavian Saxophone Festival - Program</title>
+        <title>Scandinavian Saxophone Festival - Join!</title>
         <link rel="stylesheet" href="styles.css">
     </head>
 
  <body>
-   <h1>Scandinavian Saxophone Festival - Join!</h1>
+   <h1>Scandinavian Saxophone Festival</h1>
         <div class="sidebar">
             <a href="program.html">Program</a>
             <a href="about.html">About</a>
